<resources>
    <string name="app_name">IToken</string>
    <string name="see_all_tokens">Увидеть всю библиотеку</string>
    <string name="see_collections">Открыть библиотеку коллекций</string>
    <string name="add_token_successful">Токен был успешно создан!</string>
    <string name="no_price">Сколько стоит ваш токен?</string>
    <string name="no_name">Вы не добавили имя ._.</string>
    <string name="no_photo">Вы не вставили фото ._.</string>
    <string name="ending_create_token">Вы уверены в своих данных? Удалить токен уже не получится. Продолжить?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="ok">Хорошо</string>
    <string name="info">Дополнительная информация:</string>
    <string name="send_token">Вы уверены, что хотите продать токен на аукционе? Продолжить?</string>
    <string name="send_token_confirm">Ваш токен отправлен системе продаж</string>
    <string name="price_amount">Цена: %1$s ICrystal</string>
    <string name="balance_amount">%1$s ICrystal</string>
    <string name="favorites_amount">Оценок: %1$s</string>
    <string name="bought_amount">Куплено: %1$s</string>
    <string name="created_amount">Создано: %1$s</string>
    <string name="traded_amount">Аукционы: %1$s</string>
    <string name="owners_amount">Продаж: %1$s</string>
    <string name="creators_amount">Создателей: %1$s</string>
    <string name="buy_token">Вы уверены, что хотите купить токен? С вас будет списано %1$s ICrystal. Продолжить?</string>
    <string name="buy_token_confirm">Токен был успешно добавлен в библиотеку</string>
    <string name="buy_token_deny">Недостаточно средств на покупку токена!</string>
    <string name="paint_saved_confirm">Рисунок был сохранён в галерею. Возьмите его оттуда</string>
    <string name="not_same_passwords">Пароли должны совпадать</string>
    <string name="too_expensive_token">Ваш токен слишком дорогой, занизьте цену</string>
    <string name="search_ready">Результаты по запросу: %1$s</string>
    <string name="price_amount_for_collection">Общая цена: %1$s ICrystal</string>
    <string name="send_token_to_user_question">Вы точно хотите продать токен пользователю %1$s?</string>
    <string name="send_token_to_user_complete">Ваш токен был продан пользователю "%1$s"</string>
    <string name="mark_was_given">Ваша ставка принята!</string>
    <string name="bad_mark">Введите сумму, которая есть на вашем счету!</string>
    <string name="current_balance">На вашем счету %1$s ICrystal</string>
    <string name="minimal_price">Минимальная цена: %1$s ICrystal</string>
    <string name="wrong_fields">Ошибка в введённых данных. Проверьте их и повторите попытку</string>
    <string name="empty_fields">Введите все нужные данные</string>
    <string name="photo_selected">Фото выбрано</string>
    <string name="user_exists">Такой пользователь уже существует</string>
    <string name="photo_changed">Фото было изменено</string>
    <string name="change_photo_question">Вы уверены, что хотите изменить фото профиля?</string>
    <string name="create_token">Создайте новый токен!</string>
    <string name="choose_image">Выберите картинку*</string>
    <string name="paint_token">Нарисовать токен</string>
    <string name="galery">Галерея</string>
    <string name="give_name">Дайте имя токену*</string>
    <string name="name">Название</string>
    <string name="give_description">Дайте описание токену</string>
    <string name="description">Описание</string>
    <string name="give_price">Стоимость токена*</string>
    <string name="price">Цена</string>
    <string name="create_token_complete">Создать токен</string>
    <string name="main_page">Главная</string>
    <string name="token_library">Библиотека токенов</string>
    <string name="for_sale">Выгодные предложения</string>
    <string name="cool_collections">Трендовые коллекции</string>
    <string name="choose_color_and_tassel">Выберите цвет и толщину кисти</string>
    <string name="done">Готово</string>
    <string name="small">Маленький</string>
    <string name="medium">Средний</string>
    <string name="large">Большой</string>
    <string name="back">Назад</string>
    <string name="easycrystal">EasyCrystal</string>
    <string name="created_at">Дата создания:</string>
    <string name="tokens_amount">Количество токенов:</string>
    <string name="loading">Загрузка…</string>
    <string name="welcome_to">Добро пожаловать в IToken</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="no_account">Нет аккаунта?  </string>
    <string name="members">Участники</string>
    <string name="give_a_mark">Дать цену</string>
    <string name="no_connection">Нет подключения к интернету. Проверьте подключение и повторите попытку</string>
    <string name="update">Обновить</string>
    <string name="easy_crystal">EasyCrystal</string>
    <string name="products">Покупки</string>
    <string name="creations">Созданые токены</string>
    <string name="auctions">Аукционы</string>
    <string name="registration_on">Регистрация на IToken</string>
    <string name="enter_nickname">Введите свой никнейм</string>
    <string name="enter_description">Расскажите о себе</string>
    <string name="enter_email">Введите свой Email</string>
    <string name="enter_password">Введите пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="enter_photo">Добавить фото профиля</string>
    <string name="register">Зарегистрироваться</string>
    <string name="search">Поиск</string>
    <string name="send_to_auction">Продать токен</string>
    <string name="get_token">Приобрести токен</string>
    <string name="details">Детали</string>
    <string name="address_contract">Адрес контракта</string>
    <string name="token_id">ID Токена</string>
    <string name="token_standard">Стандарт Токена:</string>
    <string name="second_owner_name">Имя второго владельца:</string>
    <string name="metadata">Метадата</string>
    <string name="auction">Аукционы</string>
    <string name="current">Текущие</string>
    <string name="history">История</string>
    <string name="no_trades">На данный момент нет продаж. Зайдите позже</string>
    <string name="see_members">Посмотреть участников</string>
    <string name="enter_mark">Введите нужную сумму</string>
    <string name="cancel">Отмена</string>
    <string name="buy_for">Купит за:</string>
    <string name="profile">Профиль</string>
    <string name="sign_out">Вы уверены, что хотите выйти?</string>
    <string name="description_value">%1$s %2$s</string>
    <string name="little_mark">Введите сумму больше минимальной цены!</string>
    <string name="login">Вход</string>
    <string name="exit_confirm">Вы вышли из системы</string>
    <string name="sold">Данный токен был только что продан</string>
    <string name="enter_confirn">Вы вошли в систему</string>
    <string name="token_downloaded">Токен был успешно сохранён в галерею</string>
    <string name="token_download_confirm">Вы уверены, что хотите скачать данный NFT?</string>
</resources>