<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.addtoken.presentation.fragment.AddTokenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_create_token"
            style="@style/AllTokensFragmentTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/create_token"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_choose_picture"
            style="@style/AllTokensFragmentTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_image"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_create_token" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview_for_picture"
            android:layout_width="360dp"
            android:layout_height="360dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_choose_picture">

            <ImageView
                android:id="@+id/iv_for_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_go_to_canvas"
            style="@style/AllAppButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paint_token"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_go_to_gallery"
            app:layout_constraintTop_toBottomOf="@+id/cardview_for_picture" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_go_to_gallery"
            style="@style/AllAppButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/galery"
            app:layout_constraintEnd_toStartOf="@+id/btn_go_to_canvas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardview_for_picture" />

        <TextView
            android:id="@+id/tv_enter_name"
            style="@style/AllTokensFragmentTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/give_name"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/btn_go_to_gallery" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.InputFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/name"
            android:textColorHint="@color/red_dark"
            app:boxStrokeColor="@color/red_dark"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_enter_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_enter_description"
            style="@style/AllTokensFragmentTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/give_description"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/til_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.InputFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/description"
            android:textColorHint="@color/red_dark"
            app:boxStrokeColor="@color/red_dark"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_enter_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_select_price"
            style="@style/AllTokensFragmentTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/give_price"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_prise"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.InputFields"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/price"
            android:textColorHint="@color/red_dark"
            app:boxStrokeColor="@color/red_dark"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/red_dark"
            app:layout_constraintBottom_toBottomOf="@+id/tv_select_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_select_price"
            app:layout_constraintTop_toTopOf="@+id/tv_select_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_prise"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:maxLength="8"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/create_token_complete"
            app:icon="@drawable/create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_price" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>